Fix padding of Add Widget buttons on mobile

--- a/styles/reusable/_add-widget-button.scss
+++ b/styles/reusable/_add-widget-button.scss
@@ -1,11 +1,13 @@
 .add-widget-button {
   padding-top: 4px;
   padding-bottom: 4px;
-  // Because the plus icon SVG contains some intrinsic whitespace around the
-  // icon, we can subtract off that spacing to make the button feel more
-  // equally padded
-  padding-left: 10px;
   font-size: $font-size-xxxs;
+  @include layout(tablet) {
+    // Because the plus icon SVG contains some intrinsic whitespace around the
+    // icon, we can subtract off that spacing to make the button feel more
+    // equally padded
+    padding-left: 10px;
+  }
 }
 .add-widget-button-icon,
 .add-widget-button-label {
